--- a/Ansible/templates/backend-couchdb-config.py.j2
+++ b/Ansible/templates/backend-couchdb-config.py.j2
@@ -1,5 +1,4 @@
-23 lines (19 sloc)  790 Bytes
-  
+ 
 # coding: utf-8
 
 HTTP_X_API_KEY = 'HTTP_X_API_KEY'
@@ -14,12 +13,8 @@ COUCHDB_TWEET_DB = 'origin_tweet'
 COUCHDB_TRACK_DB = 'track'
 COUCHDB_TIME_DB = 'time_{}_{}_{}_{}_{}'
 
-OBJECT_STORAGE_URL = 'https://swift.rc.nectar.org.au/v1/AUTH_0ca7fac1451c4f519376f20812279bfc'
-OBJECT_STORAGE_PREURL = 'https://swift.rc.nectar.org.au/v1/AUTH_0ca7fac1451c4f519376f20812279bfc'
-OBJECT_STORAGE_CONTAINER = 'twitter_pic'
-
 OS_AUTH_URL = 'https://keystone.rc.nectar.org.au:5000'
 OS_TENANT_ID = 'unimelb-comp90024-group-7'
-OS_USERNAME = 'lihuan.zhang@student.unimelb.edu.au'
-OS_PASSWORD = 'NjNkMjk0Y2Y0MGYwYjlj'
+OS_USERNAME = 'zexz1@student.unimelb.edu.au'
+OS_PASSWORD = 'MmUwMmRmODAyNzljNzk5'
 OS_VERSION = '3'
